--- a/manifest.json
+++ b/manifest.json
@@ -9,11 +9,13 @@
 	"badge_colour": "EDD198",
 	"badge_text_colour": "362708",
 	"display_name": "Bakery",
-	"version": "0.1.12~4",
+	"version": "0.1.12~5",
 	"dependencies": [
 		"Steamodded (>=1.0.0~ALPHA-1304a)",
 		"Lovely (>=0.6)"
 	],
-	"conflicts": [],
+	"conflicts": [
+		"Cryptid"
+	],
 	"provides": []
 }
