Add Lite Version

--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,16 @@
 {
-	"id": "Bakery",
-	"name": "Bakery",
-	"author": ["BakersDozenBagels"],
-	"description": "Some miscellaneous additions.",
-	"prefix": "Bakery",
-	"main_file": "src/main.lua",
-	"priority": 0,
-	"badge_colour": "EDD198",
-	"badge_text_colour": "362708",
-	"display_name": "Bakery",
-	"version": "0.1.25~5",
-	"dependencies": [
-		"Steamodded (>=1.0.0~ALPHA-1304a)",
-		"Lovely (>=0.6)"
-	],
-	"conflicts": [
-		"Cryptid"
-	],
-	"provides": []
+  "id": "Bakery",
+  "name": "Bakery",
+  "author": ["BakersDozenBagels"],
+  "description": "Some miscellaneous additions.",
+  "prefix": "Bakery",
+  "main_file": "src/main.lua",
+  "priority": 0,
+  "badge_colour": "EDD198",
+  "badge_text_colour": "362708",
+  "display_name": "Bakery",
+  "version": "0.1.26~1",
+  "dependencies": ["Steamodded (>=1.0.0~ALPHA-1304a)", "Lovely (>=0.6)"],
+  "conflicts": [],
+  "provides": []
 }
