Remove scripts from lite distributions

--- a/.github/workflows/create_lite_version.yaml
+++ b/.github/workflows/create_lite_version.yaml
@@ -54,6 +54,9 @@ jobs:
                     rm -f "$file"
                 fi
             done
+
+            git rm -rf .github || true
+            rm -rf .github || true
         - name: Update metadata
           run: |
             jq '.id = "Bakery_Lite" | .name = "Bakery (Lite)" | .display_name = "Bakery (Lite)" | .description = "The API-only version of Bakery." | .provides[0] = "Bakery (" + .version + ")"' manifest.json | sponge manifest.json
