--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "badge_colour": "EDD198",
   "badge_text_colour": "362708",
   "display_name": "Bakery",
-  "version": "0.1.27~1",
+  "version": "1.0.0",
   "dependencies": ["Steamodded (>=1.0.0~ALPHA-1304a)", "Lovely (>=0.6)"],
   "conflicts": [],
   "provides": []
