--- a/.github/workflows/create_lite_version.yaml
+++ b/.github/workflows/create_lite_version.yaml
@@ -52,7 +52,7 @@ jobs:
             done
 
             for file in assets/**/*.*; do
-                if [ "$(basename "$file")" != Icon.png ]; then
+                if [ "$(basename "$file")" != Icon.png -a "$(basename "$file")" != BakeryCharmsUtil.png ]; then
                     git rm -f "$file"
                     rm -f "$file"
                 fi
@@ -63,7 +63,7 @@ jobs:
         - name: Update metadata
           run: |
             jq '.id = "Bakery_Lite" | .name = "Bakery (Lite)" | .display_name = "Bakery (Lite)" | .description = "The API-only version of Bakery." | .provides[0] = "Bakery (" + .version + ")"' manifest.json | sponge manifest.json
-            printf '# Bakery Lite Version\n\nA version of [Bakery](https://github.com/BakersDozenBagels/BalatroBakery) with no content. This can be used as a dependency for other mods. Note that both versions can be installed together without issue.\n\n## Installation\n\n1. Bakery requires [Steamodded](https://github.com/Steamodded/smods). Follow the instructions to install it if you haven'"'"'t already.\n2. Clone this repository into your mods folder, or download it as a zip and place it there.' > README.md
+            printf '# Bakery Lite Version\n\nA version of [Bakery](https://github.com/BakersDozenBagels/BalatroBakery) with no content. This can be used as a dependency for other mods. Note that both versions can be installed together without issue so long as both are up-to-date.\n\n## Installation\n\n1. Bakery requires [Steamodded](https://github.com/Steamodded/smods). Follow the instructions to install it if you haven'"'"'t already.\n2. Clone this repository into your mods folder, or download it as a zip and place it there.' > README.md
         - name: Diff
           run: git diff
         - name: Commit results
