--- a/lovely.toml
+++ b/lovely.toml
@@ -183,6 +183,7 @@ match_indent = true
 times = 1
 payload = "t[#t + 1] = G.Bakery_charm_area"
 
+# Down tag
 [[patches]]
 [patches.pattern]
 target = "functions/state_events.lua"
